[package]
name = "gourcers"
version = "0.1.0"
edition = "2021"
authors = ["Campbell M. Cole <cmcoleco@gmail.com>"]
description = "A CLI tool for gourcing many repos at once."
categories = ["command-line-utilities"]
keywords = ["gource", "cli", "git", "tool"]
repository = "https://github.com/campbellcole/gourcers"
license = "MIT"
exclude = ["flake.nix", "flake.lock", "pkgs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive", "env"] }
diacritics = "0.1.3"
dotenv = "0.15.0"
env_logger = "0.10.0"
envy = "0.4.2"
futures = "0.3.26"
indicatif = { version = "0.17.3", features = ["tokio"] }
lazy-regex = "2.4.1"
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
