[package]
name = "gourcers-ng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive", "env"] }
color-eyre = "0.6.2"
console = "0.15.8"
diacritics = "0.2.0"
dialoguer = { version = "0.11.0", default-features = false }
dotenvy = "0.15.7"
emojis = "0.6.1"
indicatif = { version = "0.17.7", features = ["improved_unicode"] }
lazy-regex = { version = "3.1.0", features = ["std"] }
reqwest = { version = "0.11.24", default-features = false, features = [
    "blocking",
    "json",
] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tap = "1.0.1"
temp-dir = "0.1.12"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
default = ["native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
