[package]
name = "gourcers"
version = "1.0.0"
edition = "2021"
exclude = [".vscode", ".envrc", "flake.*"]

authors = ["Campbell Cole <pslightjs@gmail.com>"]
description = "A CLI tool for making gource visualizations of multiple repositories"
homepage = "https://github.com/campbellcole/gourcers"
documentation = "https://github.com/campbellcole/gourcers"

categories = ["command-line-utilities", "visualization", "multimedia::video"]
keywords = ["gource", "github", "git"]

[dependencies]
clap = { version = "4.4.18", features = ["derive", "env"] }
color-eyre = "0.6.2"
console = "0.15.8"
diacritics = "0.2.0"
dialoguer = { version = "0.11.0", default-features = false }
dotenvy = "0.15.7"
emojis = "0.6.1"
indicatif = { version = "0.17.7", features = ["improved_unicode"] }
lazy-regex = { version = "3.1.0", features = ["std"] }
reqwest = { version = "0.11.24", default-features = false, features = [
    "blocking",
    "json",
] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tap = "1.0.1"
temp-dir = "0.1.12"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
